--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,70 @@ header {
     height: 400px;
     background-color: blueviolet;
 }
+
+/* SEZIONE PIANO DROPBOX */
+.plan-top {
+    
+    /* test */
+    margin-top: 6em;
+    height: 150px;
+    background-color: aquamarine;
+}
+
+.plan-top .plan-title {
+    
+    /* test */
+    height: 25px;
+    background-color: yellow;
+}
+
+.plan-top input {
+
+    /* test */
+    margin-right: 10em;
+}
+
+.plan-bottom {
+    /* test */
+    height: 600px;
+    background-color: yellowgreen;
+}
+
+.side-plan-col {
+    width: calc((100%/3) - 10px);
+    margin: 0 5px;
+
+    /* test */
+    height: 95%;
+    border: 2px solid red;
+}
+
+.enterprise-top {
+    /* test */
+    height: 200px;
+    border: 3px solid red;
+}
+
+.enterprise-top h3 {
+    text-align: center;
+    /* test */
+    height: 15%;
+    border: 3px solid black;
+}
+
+.enterprise-image {
+    width: 50%;
+
+    /* test */
+    height: 300px;
+    background-color: bisque;
+}
+
+.enterprise-text {
+    width: calc(50% - 5px);
+    margin-left: 5px;
+
+    /* test */
+    height: 300px;
+    background-color: blueviolet;
+}
