--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,21 @@
     clear: both;
 }
 
+img {
+    width: 100%;
+}
+
 li {
     list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 /* COMMON/UTILITY */
 html {
     font-family: 'Open Sans', sans-serif;
-    font-size: 100%;
 }
 
 .col {
@@ -68,7 +75,7 @@ html {
 header {
     line-height: 50px;
     /* test */
-    height: 50px;
+    /* height: 50px; */
 }
 .nav-logo {
     width: 12.5%;
@@ -80,6 +87,7 @@ header {
 
 .nav-logo img {
     vertical-align: middle;
+    width: 110px;
 }
 
 .nav-center-menu {
@@ -112,28 +120,44 @@ nav a {
 .jumbotron {
     /* test */
     background-color: #b4d0e7;
-    height: 500px;
+    height: 580px;
 }
 
 .jumbo-title {
+    font-size: 4em;
     /* test */
-    height: 100px;
-    background-color: bisque;
+    /* height: 100px;
+    background-color: bisque; */
 }
 
 .text-col {
-    width: 40%;
+    width: 35%;
+    margin-top: 1em;
     /* test */
-    height: 250px;
-    background-color: brown;
+    /* height: 250px; */
+    /* background-color: brown; */
+}
+
+.jumbo-btn {
+    margin: 1em -.8em;
+}
+
+#jumbo2 {
+    color: black;
+}
+
+#arrow {
+    font-size: 3em;
+    margin-top: 1em;
 }
 
 .image-col {
-    width: 60%;
+    width: 65%;
+    margin-top: 1em;
 
     /* test */
-    height: 400px;
-    background-color: blueviolet;
+    /* height: 400px;
+    background-color: blueviolet; */
 }
 
 /* SEZIONE PIANO DROPBOX */
