--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,41 @@ html {
     line-height: 2em;
 }
 
+/* BACKGROUND */
+.bg-green {
+    border: 5px solid #d0e9cd;
+    background-color: #a2d39b;
+    padding: 5px;
+}
+
+.bg-brown {
+    background-color: #61082b;
+}
+
+.bg-azure {
+    background-color: #0093ce;
+}
+
+.bg-tomato {
+    background-color: #ff1c1c;
+}
+
+.bg-bordeaux {
+    background-color: #d5001f;
+}
+
+.bg-celest {
+    background-color: #b4d0e7;
+}
+
+.bg-blue {
+    background-color: #0d2481;
+}
+
+.bg-yellow {
+    background-color: #ffd830;
+}
+
 /* BOTTONI */
 .blue-btn {
     margin-left: 1em;
@@ -163,6 +198,10 @@ nav a {
 #arrow {
     font-size: 3em;
     margin-top: 1em;
+}
+
+#arrow a {
+    color: black;
 }
 
 .image-col {
@@ -329,4 +368,32 @@ nav a {
 
 .five-thousand-section a {
     color: #0061ff;
+}
+
+.side-square-partner {
+    width: 450px;
+    /* test */
+    /* height: 500px;
+    background-color: red; */
+}
+
+.partner-square {
+    width: 225px;
+    height: 225px;
+    position: relative;
+}
+
+.partner-square img {
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.designit-col {
+    width: calc(100% - 900px);
+    /* test */
+    height: 450px;
+    background-color: #f5f5f5;
 }
