--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@ html {
     margin: 0 auto;
 }
 
+.container2 {
+    width: 60%;
+    margin: 0 auto;
+}
+
 .mt-2 {
     margin-top: 2em;
 }
@@ -396,4 +401,47 @@ nav a {
     /* test */
     height: 450px;
     background-color: #f5f5f5;
+}
+
+.designit-logo img {
+    width: 30%;
+    border-bottom: 1px solid #d0d0d3;
+}
+
+.designit-logo {
+    padding: 3em 3em;
+}
+
+.designit-text {
+    padding: 0 3em;
+}
+
+.partnerships {
+    height: 800px;
+    background-color: #b4d0e7;
+    position: relative;
+}
+
+.partnerships .container h1 {
+    display: inline-block;
+    font-size: 3em;
+    color: #61082b;
+}
+
+.partnerships .container {
+    position: absolute;
+    bottom: 6em;
+    left: 14em;
+}
+
+.prova-ora {
+    display: inline-block;
+    position: absolute;
+    bottom: 6em;
+    right: 6em;
+}
+
+.prova-ora a {
+    background-color: white;
+    padding: .8em 2em;
 }
