--- a/css/style.css
+++ b/css/style.css
@@ -331,12 +331,13 @@ nav a {
 }
 
 .side-square-partner {
-    width: 520px;
+    width: 30%;
+    height: 500px;
 }
 
 .partner-square {
-    width: 260px;
-    height: 260px;
+    width: 50%;
+    height: 50%;
     position: relative;
 }
 
@@ -349,9 +350,8 @@ nav a {
 }
 
 .designit-col {
-    width: calc(100% - 1040px);
-    /* test */
-    height: 520px;
+    width: 40%;
+    height: 500px;
     background-color: #f5f5f5;
     overflow: auto;
 }
